# network-analysis

./: .cursorrules  .gitignore  CHANGLOG.md  PIPELINE_README.md  README.md  create_notebook.py  network_analysis.ipynb  network_analysis_new.ipynb  network_analysis_pipeline.ipynb  network_analysis_script.py  open AI deepseek.py  pyproject.toml  start_jupyter.sh
algorithms/: pipeline_executor.py  step_1_clean_patent_data.py  step_1_remove_personal_application.py  step_2_collaborative_RD_network_construction.py  step_2_knowledge_collaborative_RD_network_construction.py  step_2_knowledge_network_construction.py  step_2_knowledge_technology_network_construction.py  step_2_technology_collaborative_RD_network_construction.py  step_2_technology_network_construction.py  step_3_network_layer_weights.py  step_4_criticality_index_calculation.py  step_4_structural_hole_coupling_calculation.py  step_4_structural_hole_coupling_database_construction.py  step_5_centrality_coupling_calculation.py  step_5_centrality_coupling_database_construction.py  step_5_centrality_index_calculation.py  step_6_criticality_and_centrality_database_construction.py  step_6_index_weights.py  step_7_criticality-centrality_index_calculation.py  step_7_criticality_centrality_index_calculation.py
util/: step_1_clean_patent_data.py  step_1_remove_personal_application.py  step_2_knowledge-technology_network_construction.py  step_2_knowledge_network_construction.py  step_2_technology-collaborative_R&D_network_construction.py  step_2_technology_network_construction.py  step_4_structural_hole_coupling_calculation.py  (+3 more)
(+4 files in other folders)
